# coatings-cv-project

./: .env.example  .gitignore  README.md  environment.yml  pyproject.toml  requirements.txt
configs/: train_classifier.yaml
data/: README.md  coatings_manifest.csv
notebooks/: 01_eda.ipynb  03_dataset_and_model.ipynb  04_training.ipynb  05_corrosion_detection.ipynb  06_color_analysis.ipynb  07_gradcam.ipynb
