[project]
name = "coatings-cv-project"
version = "0.1.0"
description = "Industrial computer vision for coatings defects, corrosion, color, and synthetic data generation"
requires-python = ">=3.11"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
